fix(index): hid footer nav on mobile, moved main nav rightto fill book now gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,7 +352,7 @@ footer {
     }
 
     .nav_item_lg:first-child {
-        margin: 0 0 0 10vw;
+        margin: 0 0 0 24vw;
     }
 
     .nav_item_lg>a {
